# anthropicChat

./: .gitignore
claude_flask_app/: app.py  claude_streamer.py  pyproject.toml  thought_chain.py
claude_stream_web/: README.md  pubspec.yaml
claude_stream_web/android/app/: build.gradle
claude_stream_web/android/app/src/main/: AndroidManifest.xml
claude_stream_web/android/app/src/main/kotlin/com/example/claude_stream_web/: MainActivity.kt
claude_stream_web/ios/Runner/: Info.plist
claude_stream_web/ios/Runner.xcodeproj/: project.pbxproj
claude_stream_web/lib/: main.dart
claude_stream_web/lib/components/: claude_app_bar.dart  claude_drop_zone.dart  claude_input_field.dart  claude_response_box.dart  claude_send_button.dart
claude_stream_web/lib/config/: app_config.dart  app_theme.dart
claude_stream_web/lib/services/: claude_api_service.dart
claude_stream_web/linux/: CMakeLists.txt  my_application.cc
claude_stream_web/macos/Runner.xcodeproj/: project.pbxproj
claude_stream_web/macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
claude_stream_web/macos/Runner/Configs/: AppInfo.xcconfig
claude_stream_web/test/: widget_test.dart
claude_stream_web/web/: index.html  manifest.json
claude_stream_web/windows/: CMakeLists.txt
claude_stream_web/windows/runner/: Runner.rc  main.cpp
