[tool.poetry]
name = "claude-flask-app"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
flask = "^3.1.0"
flask-cors = "^5.0.1"
langchain = "^0.3.23"
anthropic = "^0.49.0"
langchain-anthropic = "^0.3.10"
litellm = "^1.30.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
